# pi

./: .gitignore  .gitlab-ci-dso.yml
infra/: Chart.yaml  values.yaml
infra/templates/: _helpers.tpl  bobrb.yaml  bobsa.yaml  deployment.yaml  ingress.yaml  role.yaml  secret.sops.enc.yaml  service.yaml  token.sops.enc.yaml
myserver/: .gitlab-ci-dso.yml  Cargo.toml  Dockerfile
myserver/src/: main.rs
myserver/static/: index.html
