[package]
name = "myserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.108"
include_dir = { version = "0.7.4", features = ["glob","metadata"] }
mime_guess = "2.0.5"
kube = { version = "0.92.0", features = [] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
anyhow = "1.0.86"
futures = "0.3.30"
clap = { version = "4.5.8", features = ["derive"] }
serde_yaml = "0.9.34"
